Améliorer le design - Passer par les variables Ionic plutôt que de surcharger le CSS - Optimisation des pages - Page Devis remaniée en tableau - Suppression de la modale Module - Apparition d'une erreur sur la page nouveau client

--- a/src/pages/authentication/authentication.html
+++ b/src/pages/authentication/authentication.html
@@ -2,10 +2,10 @@
 
   <div class="background">
 
-    <ion-grid class="ion-grid" >
-      <ion-row class="ion-row" justify-content-center align-items-center>
+    <ion-grid class="height-max" >
+      <ion-row class="height-max" justify-content-center align-items-center>
         <ion-col >
-          <ion-card class="ion-card" >
+          <ion-card class="height-max authentication-card">
             <ion-list>
               <ion-card-header>
                 <img  src="./assets/imgs/logo.svg" class="img-logo">
