--- a/src/pages/nouveau-client/nouveau-client.html
+++ b/src/pages/nouveau-client/nouveau-client.html
@@ -1,23 +1,17 @@
 <ion-header>
-
-
 </ion-header>
 
-
 <ion-content padding>
-
-  <ion-card class="ion-card">
+  <ion-card class="height-max">
     <ion-card-content>
-      <form >
-
-
-        <ion-grid class="ion-grid" >
+      <form>
+        <ion-grid class="height-max">
 
           <ion-row>
             <ion-title text-center>NOUVEAU CLIENT</ion-title>
           </ion-row>
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-list radio-group>
               <ion-item>
                 <ion-label>Madame</ion-label>
@@ -32,7 +26,7 @@
 
           </ion-row>
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-col>
                 <ion-item>
                   <ion-label floating>Prénom</ion-label>
@@ -47,7 +41,7 @@
             </ion-col >
           </ion-row>
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-col>
               <ion-item>
                 <ion-label floating>Adresse</ion-label>
@@ -58,7 +52,7 @@
 
 
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-col>
               <ion-item>
                 <ion-label floating>Code Postal</ion-label>
@@ -73,7 +67,7 @@
             </ion-col >
           </ion-row>
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-col>
               <ion-item>
                 <ion-label floating>Numéro de téléphone</ion-label>
@@ -88,7 +82,7 @@
             </ion-col >
           </ion-row>
 
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
             <ion-col>
               <ion-item>
                 <ion-label floating>Email</ion-label>
@@ -96,7 +90,7 @@
               </ion-item>
             </ion-col >
           </ion-row>
-          <ion-row class="ion-row" >
+          <ion-row class="height-max" >
 
             <ion-col col-6>
             </ion-col >
