--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -1,6 +1,6 @@
 <ion-content padding>
 
-  <ion-card class="ion-card">
+  <ion-card class="height-max">
 
     <ion-grid class="ion-grid" >
       <ion-row>
