Améliorer le design - Amélioration du parcours - Ajout d'un localStorage comprenant employé et client pour faciliter le parcours - Ajout d'une page editionDevis qui simplifie les devs pour le parcours (copie de conception devis prenant en parametres client et projet) - Corrections - Correction de la modale nouveau client - Correction de la modale ajout produit

--- a/src/pages/devis/devis.html
+++ b/src/pages/devis/devis.html
@@ -30,7 +30,7 @@
 
         <ion-row>
           <ion-col col-12 col-sm-4 text-center text-sm-left>
-            <p>Réf. projet : {{refProjet}}</p>
+            <p>Réf. projet : {{projet.referenceProjet}}</p>
             <p>Date projet : {{projet.dateProjet}}</p>
             <p>{{projet.adresseProjet}}</p>
           </ion-col>
@@ -138,6 +138,13 @@
 
           </ion-row>
         </div>
+
+        <ion-row>
+          <ion-col col-12>
+            <button ion-button color="green-madera" float-right (click)="sendDevis()">VALIDER</button>
+            <button ion-button color="green-madera" float-right (click)="cancel()">ANNULER</button>
+          </ion-col>
+        </ion-row>
 
       </ion-grid>
     </ion-card-content>
