--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -1,9 +1,26 @@
+<ion-header>
+  <ion-navbar text-center hideBackButton="true">
+    <!--<button ion-button menuToggle>-->
+    <!--<ion-icon name="menu"></ion-icon>-->
+    <!--</button>-->
+    <img src="./assets/imgs/logo.svg" class="img-logo" alt="Madera"/>
+  </ion-navbar>
+</ion-header>
+
 <ion-content padding>
+
+  <ion-fab top right edge>
+    <button mini ion-fab class="contact-icon">
+      <ion-icon name="contact"></ion-icon>
+    </button>
+    <ion-fab-list>
+      <button ion-fab (click)="disconnect()"><ion-icon name="exit"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
 
   <ion-card class="height-max">
 
     <ion-card-header text-center>
-      <ion-icon name="arrow-back" (click)="pop()" float-start></ion-icon>
       <h2>CLIENT</h2>
     </ion-card-header>
 
