--- a/src/pages/identification-projet/identification-projet.html
+++ b/src/pages/identification-projet/identification-projet.html
@@ -1,4 +1,22 @@
+<ion-header>
+  <ion-navbar text-center hideBackButton="true">
+    <!--<button ion-button menuToggle>-->
+    <!--<ion-icon name="menu"></ion-icon>-->
+    <!--</button>-->
+    <img src="./assets/imgs/logo.svg" class="img-logo" alt="Madera"/>
+  </ion-navbar>
+</ion-header>
+
 <ion-content padding>
+
+  <ion-fab top right edge>
+    <button mini ion-fab class="contact-icon">
+      <ion-icon name="contact"></ion-icon>
+    </button>
+    <ion-fab-list>
+      <button ion-fab (click)="disconnect()"><ion-icon name="exit"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
 
   <ion-card class="height-max">
 
@@ -18,9 +36,9 @@
         <ion-row class="height-max" justify-content-center align-items-center>
 
           <ion-col col-md-6 col-xs-12>
-            <div *ngIf="haveProjet" class="ion-card-projects">
+            <div *ngIf="this.client.projets.length>0" class="ion-card-projects">
               VOS PROJETS
-              <ion-card *ngFor="let projet of client.projets; let i = index" (click)="detailsDevis(projet,i)">
+              <ion-card *ngFor="let projet of client.projets; let i = index" (click)="detailsDevis(projet)">
                 <ion-card-content>
                   {{projet.nomProjet}}
 
@@ -44,7 +62,7 @@
                 </ion-card-content>
               </ion-card>
             </div>
-            <div *ngIf="!haveProjet" text-center>
+            <div *ngIf="this.client.projets.length<1" text-center>
               AUCUN PROJET
             </div>
           </ion-col>
