Corrections page identification-projet - Scroll des projets - Scroll de la page

--- a/src/pages/identification-client/identification-client.html
+++ b/src/pages/identification-client/identification-client.html
@@ -18,16 +18,16 @@
     </ion-fab-list>
   </ion-fab>
 
-  <ion-card class="height-max">
+  <ion-card class="min-height-max">
 
     <ion-card-header text-center>
       <h2>CLIENT</h2>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-grid class="height-max">
+      <ion-grid>
 
-        <ion-row class="height-max" justify-content-center align-items-center>
+        <ion-row align-items-center>
 
           <ion-col col-md-6 col-xs-12>
             <div class="form-customer">
