Drafted and Refused project are editable

--- a/src/pages/devis/devis.html
+++ b/src/pages/devis/devis.html
@@ -142,6 +142,7 @@
         <ion-row>
           <ion-col col-12>
             <button ion-button color="green-madera" float-right (click)="sendDevis()">VALIDER</button>
+            <button ion-button color="green-madera" float-right [disabled]="canUpdate()" (click)="update()">EDITER</button>
             <button ion-button color="green-madera" float-right (click)="cancel()">ANNULER</button>
           </ion-col>
         </ion-row>
