--- a/src/pages/devis/devis.html
+++ b/src/pages/devis/devis.html
@@ -130,7 +130,7 @@
 
               <ion-row>
                 <ion-col class="border" text-end>
-                  Total HT : {{calculateProduitTotalHT(produit.modele.referenceModele)}}€
+                  Total HT : {{produit.modele.getTotalHT()}}€
                 </ion-col>
               </ion-row>
 
